# rust-protoc-bin-vendored

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  update-bin.sh
.github/workflows/: ci.yml
ci-gen/: Cargo.toml
ci-gen/src/: main.rs
protoc-bin-vendored/: Cargo.toml  README.md  update-bin.sh  version.txt
protoc-bin-vendored-arch-template/: Cargo.toml
protoc-bin-vendored-arch-template/src/: lib.rs
protoc-bin-vendored-linux-aarch_64/: Cargo.toml
protoc-bin-vendored-linux-aarch_64/src/: lib.rs
protoc-bin-vendored-linux-ppcle_64/: Cargo.toml
protoc-bin-vendored-linux-ppcle_64/src/: lib.rs
protoc-bin-vendored-linux-riscv64/: Cargo.toml
protoc-bin-vendored-linux-riscv64/src/: lib.rs
protoc-bin-vendored-linux-s390_64/: Cargo.toml
protoc-bin-vendored-linux-s390_64/src/: lib.rs
protoc-bin-vendored-linux-x86_32/: Cargo.toml
protoc-bin-vendored-linux-x86_32/src/: lib.rs
protoc-bin-vendored-linux-x86_64/: Cargo.toml
protoc-bin-vendored-linux-x86_64/src/: lib.rs
protoc-bin-vendored-macos-aarch_64/: Cargo.toml
protoc-bin-vendored-macos-aarch_64/src/: lib.rs
protoc-bin-vendored-macos-x86_64/: Cargo.toml
protoc-bin-vendored-macos-x86_64/src/: lib.rs
protoc-bin-vendored-win32/: Cargo.toml
protoc-bin-vendored-win32/src/: lib.rs
protoc-bin-vendored/src/: lib.rs
