[package]
name = "ci-gen"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "085fbfc3687403732da0f6fa541008ebfaa0668c" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
