[package]
name = "ci-gen"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "02f88224c859bba7a243a92dec1277520d6f0b86" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
