[package]
name = "ci-gen"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
gh-actions-gen = { git = "https://github.com/stepancheg/gh-actions-gen", rev = "5f33e6b5bce2c3d76919d67f96d8dbe2e042743d" }
#gh-actions-gen = { path = "../../gh-actions-gen/gh-actions-gen" }
