[package]
name = "@@CRATE_NAME@@"
version = "@@CRATE_VERSION@@"
edition = "2021"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
description = """
protoc binary for @@ARCH@@ compiled by Google and bundled in this crate.
"""

[lib]
doctest = true
bench = false

[package.metadata.docs.rs]
all-features = true
