[package]
name = "protoc-bin-vendored"
version = "2.28.0-pre"
edition = "2018"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
description = """
protoc binaries compiled by Google and bundled in this crate.
"""

[lib]
doctest = true
bench = false

[dependencies]
protoc-bin-vendored-linux-x86_64 = { path = "../protoc-bin-vendored-linux-x86_64", version = "2.28.0-pre" }
protoc-bin-vendored-linux-x86_32 = { path = "../protoc-bin-vendored-linux-x86_32", version = "2.28.0-pre" }
protoc-bin-vendored-linux-aarch_64 = { path = "../protoc-bin-vendored-linux-aarch_64", version = "2.28.0-pre" }
protoc-bin-vendored-linux-ppcle_64 = { path = "../protoc-bin-vendored-linux-ppcle_64", version = "2.28.0-pre" }
protoc-bin-vendored-macos-x86_64 = { path = "../protoc-bin-vendored-macos-x86_64", version = "2.28.0-pre" }
protoc-bin-vendored-win32 = { path = "../protoc-bin-vendored-win32", version = "2.28.0-pre" }

[package.metadata.docs.rs]
all-features = true
