[package]
name = "protoc-bin-vendored"
version = "3.2.0"
edition = "2021"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
repository = "https://github.com/stepancheg/rust-protoc-bin-vendored/"
description = """
protoc binaries compiled by Google and bundled in this crate.
"""

[lib]
doctest = true
bench = false

[dependencies]
protoc-bin-vendored-linux-x86_64 = { path = "../protoc-bin-vendored-linux-x86_64", version = "=3.2.0" }
protoc-bin-vendored-linux-x86_32 = { path = "../protoc-bin-vendored-linux-x86_32", version = "=3.2.0" }
protoc-bin-vendored-linux-aarch_64 = { path = "../protoc-bin-vendored-linux-aarch_64", version = "=3.2.0" }
protoc-bin-vendored-linux-ppcle_64 = { path = "../protoc-bin-vendored-linux-ppcle_64", version = "=3.2.0" }
protoc-bin-vendored-linux-s390_64 = { path = "../protoc-bin-vendored-linux-s390_64", version = "=3.2.0" }
protoc-bin-vendored-macos-aarch_64 = { path = "../protoc-bin-vendored-macos-aarch_64", version = "=3.2.0" }
protoc-bin-vendored-macos-x86_64 = { path = "../protoc-bin-vendored-macos-x86_64", version = "=3.2.0" }
protoc-bin-vendored-win32 = { path = "../protoc-bin-vendored-win32", version = "=3.2.0" }

[package.metadata.docs.rs]
all-features = true
